Доработал сваггер документацию
